<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">GavaHub</string>
    <string name="app_login_introduction">Welcome to GavaHub</string>
    <string name="email_login">Enter your email address</string>
    <string name="password_login">Enter your password</string>
    <string name="login">Login</string>
    <string name="create_account">Don\'t have an account? Click below to create one</string>
    <string name="insert_details">Kindly insert the required details in the boxes below</string>
    <string name="create">Create Account</string>
    <string name="create_name">Full Name (as in Birth Certificate)</string>
    <string name="create_email">Enter your email address</string>
    <string name="create_phone">Enter your phone number</string>
    <string name="create_id">Enter your ID number</string>
    <string name="create_password">Create your password</string>
    <string name="register">Register</string>
    <string name="info_home">Click on any of the services listed below to apply</string>
    <string name="passport_button">Passport</string>
    <string name="id_button">National ID</string>
    <string name="dL_button">Driving License</string>
    <string name="name_Reg_Button">Business Name Registration</string>
    <string name="kra_title">KRA PIN APPLICATION Please provide the details as required to apply for a KRA PIN</string>
    <string name="kra_residency">Resident or Non-resident?</string>
    <string name="kra_name">Enter your name</string>
    <string name="kra_date">Date of Birth</string>
    <string name="kra_email">Email Address</string>
    <string name="idNo">ID Number</string>
    <string name="kra_sex">Sex</string>
    <string name="zipcode">ZIP Code</string>
    <string name="kra_postaladdress">Postal Address</string>
    <string name="kra_pintype">PIN type e.g. Individual or Company</string>
    <string name="next">Proceed To Payment</string>
    <string name="payment_button">Pay Amount</string>
    <string name="bus_reg_title">BUSINESS NAME REGISTRATION Please provide the details as required to apply for a Business Name</string>
    <string name="bus_ownerName">Owner Name</string>
    <string name="bus_ownerID">ID Number</string>
    <string name="bus_name">Proposed Business Name</string>
    <string name="bus_address">Business Postal Address</string>
    <string name="bus_reg_payment">To complete your application for the Business Name registration, click the button below to pay Ksh 1000 for the service</string>
    <string name="busR_title">BUSINESS REGISTRATION OWNER\'S DETAILS</string>
    <string name="next_page">NEXT PAGE</string>
    <string name="file_uploads">FILE UPLOADS</string>
    <string name="busR_payment">To complete your application for the Business Registration, click the button below to pay Ksh 1000 for the service</string>
    <string name="dL_title">DRIVING LICENSE APPLICATION APPLICANT\'S DETAILS</string>
    <string name="first_or_renew">First time or Renewal?</string>
    <string name="phonenumber">Phone Number</string>
    <string name="dLinstructorname">Driving Instructor\'s Name</string>
    <string name="dLinstructorNTSANo">Driving Instructor\'s NTSA Number</string>
    <string name="dLlicenseCategory">Driving License Category e.g CAT-B</string>
    <string name="dLSchool">Driving School Attended</string>
    <string name="dLAddress">Driving School Address</string>
    <string name="dLpayment">To complete your application for the Driving License, choose either of the options below</string>
    <string name="dLoneyear">One-year license renewal @Ksh600</string>
    <string name="id_title">NATIONAL ID APPLICATION APPLICANT\'S DETAILS</string>
    <string name="id_pob">Place of Birth</string>
    <string name="id2_title">PARENT\'S / GUARDIAN\'S DETAILS</string>
    <string name="id_mother">Mother\'s Name</string>
    <string name="id_dod">Date of Death</string>
    <string name="id_father">Father\'s Name</string>
    <string name="id_guardian">Guardian\'s Name</string>
    <string name="id_relationship">Relationship to Applicant</string>
    <string name="id_payment">To complete your application for a National ID, click the button below to pay Ksh 100 for the service</string>
    <string name="passport_title">PASSPORT APPLICATION APPLICANT\'S DETAILS</string>
    <string name="passport_recommender_name">Recommender\'s Name</string>
    <string name="passport_recommender_title">RECOMMENDER\'S DETAILS</string>
    <string name="passport_next_of_kin_title">NEXT OF KIN\'S DETAILS</string>
    <string name="passport_next_of_kin_name">Name</string>
    <string name="passport_payment">To complete your application for a Passport, click either of the options below</string>
    <string name="passport34">A Series (34 pages) @ Ksh4550</string>
    <string name="passport50">B Series (50 pages) @ Ksh6050</string>
    <string name="passport66">C Series (66 pages) @ Ksh7550</string>
    <string name="business_reg_business_name">Business Name</string>
    <string name="kra_button">KRA PIN</string>
    <string name="business_Reg_Button">Business Registration</string>
    <string name="kra_payment">To complete your application for the KRA pin, click the button below to pay Ksh 300 for the service</string>
    <string name="dLfrag2title">DRIVING LICENSE INSTRUCTION</string>
    <string name="dLthreeyear">Three-year license renewal @Ksh1400</string>
    <string name="file1" tools:ignore="MissingTranslation">Upload applicant\'s National ID(PDF)</string>
    <string name="file2" tools:ignore="MissingTranslation">Upload applicant\'s Birth Certificate(PDF)</string>
    <string name="file3" tools:ignore="MissingTranslation">Upload parent\'s / guardian\'s National ID(PDF)</string>
    <string name="file4" tools:ignore="MissingTranslation">Upload recommender\'s National ID(PDF)</string>
    <string name="set_profile_pic" tools:ignore="MissingTranslation">Set Profile Picture</string>
    <string name="logout" tools:ignore="MissingTranslation">Thank you for using GavaHub. We hope to see you soon.</string>
    <string name="logoutButton" tools:ignore="MissingTranslation">Proceed to logout</string>
    <string name="welcome" tools:ignore="MissingTranslation">Welcome to GavaHub, your home for easy and reliable access to government services</string>
    <string name="applicationInfo" tools:ignore="MissingTranslation">NB: ALL FIELDS MUST BE FILLED!! Kindly fill in all the fields that apply. For fields that do not apply, enter \'Not Applicable\' or 00 for numeric fields</string>
    <string name="website" tools:ignore="MissingTranslation">Visit our website</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout_message">Logout</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="save_settings">Save</string>
    <string name="notification">Don\'t you want to hear from us?</string>
    <string name="language_settings">Choose your preferred language below</string>
    <string name="logout_page">Logout Page</string>
    <string-array name="languages">
        <item>English</item>
        <item>Swahili</item>
    </string-array>
    <string name="save_profile">Save Profile</string>
    <string name="logo">Logo</string>
    <string name="app_rights">©2024 GavaHub. All rights reserved</string>
    <string name="user_icon">User Icon</string>
    <string name="languages">Languages</string>
    <string name="payPhone" >Kindly enter the phone number which you will use to pay for the service</string>
    <string name="certupload">Upload a valid business name registration certificate</string>
    <string name="number" translatable="false">254XXXXXXXXX</string>
</resources>
