<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrivingLicenseInstructionFragment">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:textSize="20sp"
        android:text="@string/dLfrag2title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dlInstructorNameeditTextText"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:hint="@string/dLinstructorname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/dLInstructorNTSANumbereditTextText2"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:hint="@string/dLinstructorNTSANo"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dlInstructorNameeditTextText" />

    <EditText
        android:id="@+id/dLLicenseCategoryeditTextText3"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:hint="@string/dLlicenseCategory"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dLSchoolAddresseditTextTextPostalAddress" />

    <EditText
        android:id="@+id/dLSchooleditTextText4"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:hint="@string/dLSchool"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dLInstructorNTSANumbereditTextText2" />

    <EditText
        android:id="@+id/dLSchoolAddresseditTextTextPostalAddress"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:hint="@string/dLAddress"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dLSchooleditTextText4" />

    <Button
        android:id="@+id/dLPaymentbutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:textSize="18sp"
        android:text="@string/next"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dLLicenseCategoryeditTextText3" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
