<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout14"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PassportFragment">


    <TextView
        android:id="@+id/passportTitletextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:fontFamily="@font/mulish_semi_bold"
        android:textColor="@color/black_1"
        android:textSize="20sp"
        android:text="@string/passport_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passportNameeditTextText"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:padding="3dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/kra_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passportTitletextView7" />

    <EditText
        android:id="@+id/passportDobeditTextDate2"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:padding="3dp"
        android:ems="10"
        android:hint="@string/kra_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passportNameeditTextText" />

    <EditText
        android:id="@+id/passportSexeditTextText3"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:padding="3dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/kra_sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passportDobeditTextDate2" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:padding="3dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/id_pob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passportSexeditTextText3" />

    <EditText
        android:id="@+id/passportPhoneNoeditTextNumber2"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:padding="3dp"
        android:ems="10"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <EditText
        android:id="@+id/passportZipeditTextNumber3"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:padding="3dp"
        android:ems="10"
        android:hint="@string/zipcode"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passportPhoneNoeditTextNumber2" />

    <Button
        android:id="@+id/passportNextbutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:textColor="@color/white_1"
        android:textSize="18sp"
        android:text="@string/next_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passportZipeditTextNumber3" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
