<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/info_home"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/passportButton"
        android:layout_width="109dp"
        android:layout_height="81dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/mulish_semi_bold"

        android:text="@string/passport_button"
        app:layout_constraintEnd_toStartOf="@+id/idButton"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

    <Button
        android:id="@+id/idButton"
        android:layout_width="109dp"
        android:layout_height="81dp"
        android:layout_marginTop="44dp"
        android:text="@string/id_button"
        android:fontFamily="@font/mulish_semi_bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

    <Button
        android:id="@+id/kraButton"
        android:layout_width="109dp"
        android:layout_height="81dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:text="@string/kra_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idButton"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView" />

    <Button
        android:id="@+id/dLButton"
        android:layout_width="127dp"
        android:layout_height="87dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:text="@string/dL_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passportButton" />

    <Button
        android:id="@+id/nameRegButton"
        android:layout_width="127dp"
        android:layout_height="87dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:textSize="13sp"
        android:text="@string/name_Reg_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idButton" />

    <Button
        android:id="@+id/businessRegButton"
        android:layout_width="127dp"
        android:layout_height="87dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:textSize="13sp"
        android:text="@string/business_Reg_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kraButton" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
