<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout20"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LogoutFragment">

    <TextView
        android:id="@+id/logout_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/mulish_bold"
        android:padding="10dp"
        android:text="@string/logout_page"
        android:textColor="@color/black_1"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="188dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_heading"
        app:srcCompat="@drawable/removebg_preview_dark_with_name" />

    <TextView
        android:id="@+id/logout_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:text="@string/app_rights"
        android:textColor="@color/gray_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutbutton3" />

    <TextView
        android:id="@+id/logouttextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:fontFamily="@font/mulish_semi_bold"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/gold_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_heading" />

    <Button
        android:id="@+id/logoutbutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/logoutButton"
        android:textAllCaps="true"
        android:textColor="@color/white_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logouttextView7" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>